[fix] Add flex wrap

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -18,6 +18,7 @@
 
 .games {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
